syntax = "proto3";

package project.planton.provider.kubernetes.workload.natskubernetes.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/kubernetes/workload/natskubernetes/v1/spec.proto";
import "project/planton/provider/kubernetes/workload/natskubernetes/v1/stack_outputs.proto";
import "project/planton/shared/status.proto";
import "project/planton/shared/metadata.proto";

//nats-kubernetes
message NatsKubernetes {
  //api-version
  string api_version = 1 [
    (buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'
  ];

  //resource-kind
  string kind = 2 [
    (buf.validate.field).string.const = 'NatsKubernetes'
  ];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [
    (buf.validate.field).required = true
  ];

  //spec
  NatsKubernetesSpec spec = 4 [
    (buf.validate.field).required = true
  ];

  //status
  NatsKubernetesStatus status = 5;
}

//nats-kubernetes status
message NatsKubernetesStatus {
  //lifecycle
  project.planton.shared.ApiResourceLifecycle lifecycle = 99;

  //audit-info
  project.planton.shared.ApiResourceAudit audit = 98;

  //stack-job id
  string stack_job_id = 97;

  //stack-outputs
  NatsKubernetesStackOutputs outputs = 1;
}
