syntax = "proto3";

package project.planton.shared;

import "project/planton/shared/relationship/v1/relationship.proto";

//metadata of a cloud-resource
message CloudResourceMetadata {
  // name of the cloud-resource
  string name = 1;
  // slug for the cloud-resource
  string slug = 2;
  // id of the resource
  string id = 3;
  // id of the organization to which the api-resource belongs to
  string org = 4;
  // environment to which the resource belongs to
  string env = 5;
  // labels for the resource
  map<string, string> labels = 6;
  // annotations for the resource
  map<string, string> annotations = 7;
  // tags for the resource
  repeated string tags = 8;
  //explicit relationships for the cloud-resource with other cloud-resources
  repeated project.planton.shared.relationship.v1.CloudResourceRelationship relationships = 9;
}
